[gd_scene load_steps=27 format=3 uid="uid://deefmi1bkn3hf"]

[ext_resource type="Script" path="res://world/rock/health.gd" id="1_b73ww"]
[ext_resource type="Script" path="res://mole/code/z_ordering.gd" id="2_o5q74"]
[ext_resource type="Script" path="res://farmer/code/farmer_move.gd" id="2_tsccw"]
[ext_resource type="Script" path="res://mole/code/eye_pivots.gd" id="3_gq221"]
[ext_resource type="Script" path="res://mole/code/feet.gd" id="4_nn0jm"]
[ext_resource type="Shape2D" uid="uid://ck6a8i7d6dcmb" path="res://mole/mole_shape.tres" id="5_vba58"]
[ext_resource type="Script" path="res://procedural_anim/rotate/rotator_o1.gd" id="6_kns8i"]
[ext_resource type="Script" path="res://procedural_anim/follower/follower_o1.gd" id="7_as20h"]
[ext_resource type="Script" path="res://procedural_anim/link/link.gd" id="8_gg7ch"]
[ext_resource type="Curve" uid="uid://dxenv1nhqsg32" path="res://mole/curves/body_curve.tres" id="8_q2ckd"]
[ext_resource type="Texture2D" uid="uid://dodsg4ccahpi7" path="res://mole/art/circle15.svg" id="9_fxa47"]
[ext_resource type="Texture2D" uid="uid://dd38y2nfpm8o6" path="res://mole/art/circle100.svg" id="10_71y1r"]
[ext_resource type="Texture2D" uid="uid://dulitlvlbsew6" path="res://mole/art/circle40.svg" id="11_ix7e3"]
[ext_resource type="Curve" uid="uid://13mlljq81nl5" path="res://farmer/curves/farmer_feet_curve.tres" id="12_efx61"]
[ext_resource type="Texture2D" uid="uid://c5nfahewx6l5i" path="res://farmer/art/pants.svg" id="13_1dd68"]
[ext_resource type="Texture2D" uid="uid://18gmdv6505nb" path="res://farmer/art/hat_detail.svg" id="14_5mcdc"]
[ext_resource type="Texture2D" uid="uid://qsesuv3qkks1" path="res://farmer/art/shirt.svg" id="15_wl6sl"]
[ext_resource type="Texture2D" uid="uid://pcvvba85fyja" path="res://farmer/art/belt.svg" id="16_1ax2r"]
[ext_resource type="Texture2D" uid="uid://brkifb5piav5a" path="res://farmer/art/hat.svg" id="17_bsfna"]
[ext_resource type="AudioStream" uid="uid://ucyk05pojhgg" path="res://mole/audio/steps/step.tres" id="20_2wyhh"]
[ext_resource type="Script" path="res://farmer/code/gun.gd" id="21_uasd7"]
[ext_resource type="Texture2D" uid="uid://ctnxsg5rf2fvs" path="res://farmer/art/shotgun/shotgun_butt.svg" id="22_liket"]
[ext_resource type="Texture2D" uid="uid://djm88th0anyfi" path="res://farmer/art/shotgun/shotgun_gun.svg" id="23_4up4j"]
[ext_resource type="AudioStream" uid="uid://yr6hq2ns8pco" path="res://farmer/audio/shotgun.mp3" id="24_d3226"]

[sub_resource type="Curve" id="Curve_srp8i"]
_data = [Vector2(0, 0.75), 0.0, 0.25, 0, 1, Vector2(1, 1), 0.25, 0.0, 1, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vipuo"]
random_pitch = 1.25
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("24_d3226")

[node name="Farmer" type="CharacterBody2D" groups=["character", "enemy"]]
collision_layer = 32
collision_mask = 175
script = ExtResource("1_b73ww")

[node name="Move" type="Node2D" parent="." node_paths=PackedStringArray("pivot_targets")]
script = ExtResource("2_tsccw")
pivot_targets = [NodePath("../Points/Scaler/PivotTarget"), NodePath("../Points/Followers/Head/Scaler/HeadPivotTarget"), NodePath("../Visuals/Z/HeadTop/CircleHeadMask/Eye1Visual/Eye1Pivot"), NodePath("../Visuals/Z/HeadTop/CircleHeadMask/Eye2Visual/Eye2Pivot"), NodePath("../Attack/AttackPivotTarget")]

[node name="ZOrdering" type="Node2D" parent="."]
script = ExtResource("2_o5q74")

[node name="EyePivots" type="Node2D" parent="."]
script = ExtResource("3_gq221")

[node name="Feet" type="Node2D" parent="."]
script = ExtResource("4_nn0jm")

[node name="RestTimer" type="Timer" parent="Feet"]
wait_time = 0.25
one_shot = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = ExtResource("5_vba58")

[node name="Points" type="Node2D" parent="."]

[node name="Root" type="Node2D" parent="Points"]

[node name="RemoteRoot" type="RemoteTransform2D" parent="Points/Root"]
remote_path = NodePath("../../../Visuals/Z/Root")

[node name="Scaler" type="Node2D" parent="Points"]
scale = Vector2(1, 0.577)

[node name="PivotTarget" type="Node2D" parent="Points/Scaler"]

[node name="OffsetHead" type="Node2D" parent="Points/Scaler/PivotTarget"]

[node name="RemoteOffsetHead" type="RemoteTransform2D" parent="Points/Scaler/PivotTarget/OffsetHead"]
remote_path = NodePath("../../../../Remote/OffsetHead")
update_rotation = false
update_scale = false

[node name="Pivot" type="Node2D" parent="Points/Scaler" node_paths=PackedStringArray("target")]
script = ExtResource("6_kns8i")
speed_degrees = 720.0
target = NodePath("../PivotTarget")

[node name="Base" type="Node2D" parent="Points/Scaler/Pivot"]
position = Vector2(62.5, 0)

[node name="Foot1Upper" type="Node2D" parent="Points/Scaler/Pivot"]
position = Vector2(0, 25)

[node name="RemoteFoot1Upper" type="RemoteTransform2D" parent="Points/Scaler/Pivot/Foot1Upper"]
remote_path = NodePath("../../../../RemoteFeet/Foot1Upper")
update_rotation = false
update_scale = false

[node name="Foot2Upper" type="Node2D" parent="Points/Scaler/Pivot"]
position = Vector2(0, -25)

[node name="RemoteFoot2Upper" type="RemoteTransform2D" parent="Points/Scaler/Pivot/Foot2Upper"]
remote_path = NodePath("../../../../RemoteFeet/Foot2Upper")
update_rotation = false
update_scale = false

[node name="Remote" type="Node2D" parent="Points"]

[node name="OffsetHead" type="Node2D" parent="Points/Remote"]

[node name="HeadTarget" type="Node2D" parent="Points/Remote/OffsetHead"]
position = Vector2(0, -50)

[node name="Followers" type="Node2D" parent="Points"]

[node name="Head" type="Node2D" parent="Points/Followers" node_paths=PackedStringArray("target")]
position = Vector2(0, -50)
script = ExtResource("7_as20h")
speed = 10.0
target = NodePath("../../Remote/OffsetHead/HeadTarget")
local = false

[node name="Scaler" type="Node2D" parent="Points/Followers/Head"]
scale = Vector2(1, 0.577)

[node name="HeadPivotTarget" type="Node2D" parent="Points/Followers/Head/Scaler"]

[node name="HeadPivot" type="Node2D" parent="Points/Followers/Head/Scaler" node_paths=PackedStringArray("target")]
z_index = 5
script = ExtResource("6_kns8i")
speed_degrees = 720.0
target = NodePath("../HeadPivotTarget")

[node name="OffsetNose1" type="Node2D" parent="Points/Followers/Head/Scaler/HeadPivot"]
position = Vector2(40, 0)

[node name="RemoteOffsetNose1" type="RemoteTransform2D" parent="Points/Followers/Head/Scaler/HeadPivot/OffsetNose1"]
remote_path = NodePath("../../../../../../RemoteNose/Nose1")
update_rotation = false
update_scale = false

[node name="OffsetNose2" type="Node2D" parent="Points/Followers/Head/Scaler/HeadPivot"]
position = Vector2(60, 0)

[node name="RemoteOffsetNose2" type="RemoteTransform2D" parent="Points/Followers/Head/Scaler/HeadPivot/OffsetNose2"]
remote_path = NodePath("../../../../../../RemoteNose/Nose2")
update_rotation = false
update_scale = false

[node name="Eye1BasePivot" type="Node2D" parent="Points/Followers/Head/Scaler"]
rotation = 0.872665

[node name="Eye1Base" type="Node2D" parent="Points/Followers/Head/Scaler/Eye1BasePivot"]
position = Vector2(30, 0)

[node name="Eye1Base" type="RemoteTransform2D" parent="Points/Followers/Head/Scaler/Eye1BasePivot/Eye1Base"]
remote_path = NodePath("../../../../../../RemoteEyes/Eye1Base")
update_rotation = false
update_scale = false

[node name="Eye2BasePivot" type="Node2D" parent="Points/Followers/Head/Scaler"]

[node name="Eye2Base" type="Node2D" parent="Points/Followers/Head/Scaler/Eye2BasePivot"]
position = Vector2(30, 0)

[node name="Eye2Base" type="RemoteTransform2D" parent="Points/Followers/Head/Scaler/Eye2BasePivot/Eye2Base"]
remote_path = NodePath("../../../../../../RemoteEyes/Eye2Base")
update_rotation = false
update_scale = false

[node name="HeadTop" type="Node2D" parent="Points/Followers/Head"]
position = Vector2(0, -10)

[node name="RemoteHeadTop" type="RemoteTransform2D" parent="Points/Followers/Head/HeadTop"]
remote_path = NodePath("../../../../../Visuals/Z/HeadTop")
update_rotation = false
update_scale = false

[node name="RemoteNose" type="Node2D" parent="Points"]

[node name="Nose1" type="Node2D" parent="Points/RemoteNose"]
position = Vector2(40, -50)

[node name="Nose2" type="Node2D" parent="Points/RemoteNose"]
position = Vector2(60, -50)

[node name="RemoteNose2Visual" type="RemoteTransform2D" parent="Points/RemoteNose/Nose2"]
remote_path = NodePath("../../../../Visuals/Z/Nose/Nose2Visual")
update_rotation = false
update_scale = false

[node name="RemoteEyes" type="Node2D" parent="Points"]

[node name="Eye1Base" type="Node2D" parent="Points/RemoteEyes"]
position = Vector2(19.2836, -36.7398)

[node name="Eye1" type="Node2D" parent="Points/RemoteEyes/Eye1Base"]
position = Vector2(0, -20)

[node name="RemoteEye1" type="RemoteTransform2D" parent="Points/RemoteEyes/Eye1Base/Eye1"]
remote_path = NodePath("../../../../../Visuals/Z/HeadTop/CircleHeadMask/Eye1Visual")
update_rotation = false
update_scale = false

[node name="Eye2Base" type="Node2D" parent="Points/RemoteEyes"]
position = Vector2(30, -50)

[node name="Eye2" type="Node2D" parent="Points/RemoteEyes/Eye2Base"]
position = Vector2(0, -20)

[node name="RemoteEye2" type="RemoteTransform2D" parent="Points/RemoteEyes/Eye2Base/Eye2"]
remote_path = NodePath("../../../../../Visuals/Z/HeadTop/CircleHeadMask/Eye2Visual")
update_rotation = false
update_scale = false

[node name="RemoteFeet" type="Node2D" parent="Points"]

[node name="Foot1Upper" type="Node2D" parent="Points/RemoteFeet"]
position = Vector2(0, 14.425)

[node name="Foot11" type="Node2D" parent="Points/RemoteFeet/Foot1Upper"]
position = Vector2(0, 20)

[node name="Foot12" type="Node2D" parent="Points/RemoteFeet/Foot1Upper/Foot11"]
position = Vector2(0, 30)

[node name="Foot13" type="Node2D" parent="Points/RemoteFeet/Foot1Upper/Foot11/Foot12"]

[node name="Foot14" type="Node2D" parent="Points/RemoteFeet/Foot1Upper/Foot11/Foot12/Foot13"]
position = Vector2(20, 0)

[node name="Foot2Upper" type="Node2D" parent="Points/RemoteFeet"]
position = Vector2(0, -14.425)

[node name="Foot21" type="Node2D" parent="Points/RemoteFeet/Foot2Upper"]
position = Vector2(0, 20)

[node name="Foot22" type="Node2D" parent="Points/RemoteFeet/Foot2Upper/Foot21"]
position = Vector2(0, 30)

[node name="Foot23" type="Node2D" parent="Points/RemoteFeet/Foot2Upper/Foot21/Foot22"]

[node name="Foot24" type="Node2D" parent="Points/RemoteFeet/Foot2Upper/Foot21/Foot22/Foot23"]
position = Vector2(20, 0)

[node name="Visuals" type="Node" parent="."]

[node name="Z" type="Node2D" parent="Visuals"]
z_index = 150

[node name="Body" type="Line2D" parent="Visuals/Z" node_paths=PackedStringArray("nodes")]
self_modulate = Color(0.909804, 0.717647, 0.588235, 1)
points = PackedVector2Array(0, 0, 0, -50)
width = 125.0
width_curve = ExtResource("8_q2ckd")
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12
antialiased = true
script = ExtResource("8_gg7ch")
nodes = [NodePath("../../../Points/Root"), NodePath("../../../Points/Followers/Head/HeadTop")]

[node name="Nose" type="Line2D" parent="Visuals/Z" node_paths=PackedStringArray("nodes")]
self_modulate = Color(0.909804, 0.717647, 0.588235, 1)
z_index = 1
points = PackedVector2Array(40, -50, 60, -50)
width = 35.0
width_curve = SubResource("Curve_srp8i")
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12
antialiased = true
script = ExtResource("8_gg7ch")
nodes = [NodePath("../../../Points/RemoteNose/Nose1"), NodePath("../../../Points/RemoteNose/Nose2")]

[node name="Nose2Visual" type="Sprite2D" parent="Visuals/Z/Nose"]
visible = false
self_modulate = Color(0.14902, 0.168627, 0.266667, 1)
position = Vector2(60, -50)
texture = ExtResource("9_fxa47")

[node name="HeadTop" type="Node2D" parent="Visuals/Z"]
position = Vector2(0, -60)

[node name="CircleHeadMask" type="Sprite2D" parent="Visuals/Z/HeadTop"]
clip_children = 1
z_index = 2
texture = ExtResource("10_71y1r")

[node name="Eye1Visual" type="Sprite2D" parent="Visuals/Z/HeadTop/CircleHeadMask"]
position = Vector2(19.2836, 3.26023)
texture = ExtResource("11_ix7e3")

[node name="Eye1Pivot" type="Node2D" parent="Visuals/Z/HeadTop/CircleHeadMask/Eye1Visual"]

[node name="Pupil1" type="Sprite2D" parent="Visuals/Z/HeadTop/CircleHeadMask/Eye1Visual/Eye1Pivot"]
self_modulate = Color(0.14902, 0.168627, 0.266667, 1)
z_index = 1
position = Vector2(10, 0)
texture = ExtResource("9_fxa47")

[node name="Eye2Visual" type="Sprite2D" parent="Visuals/Z/HeadTop/CircleHeadMask"]
position = Vector2(30, -10)
texture = ExtResource("11_ix7e3")

[node name="Eye2Pivot" type="Node2D" parent="Visuals/Z/HeadTop/CircleHeadMask/Eye2Visual"]

[node name="Pupil2" type="Sprite2D" parent="Visuals/Z/HeadTop/CircleHeadMask/Eye2Visual/Eye2Pivot"]
self_modulate = Color(0.14902, 0.168627, 0.266667, 1)
z_index = 1
position = Vector2(10, 0)
texture = ExtResource("9_fxa47")

[node name="Hat" type="Sprite2D" parent="Visuals/Z/HeadTop"]
self_modulate = Color(0.996078, 0.905882, 0.380392, 1)
z_index = 3
position = Vector2(0, -60)
texture = ExtResource("17_bsfna")

[node name="HatDetail" type="Sprite2D" parent="Visuals/Z/HeadTop/Hat"]
self_modulate = Color(0.996078, 0.682353, 0.203922, 1)
position = Vector2(0, -5)
texture = ExtResource("14_5mcdc")

[node name="Foot1" type="Line2D" parent="Visuals/Z" node_paths=PackedStringArray("nodes")]
self_modulate = Color(0.14902, 0.360784, 0.258824, 1)
z_index = -1
points = PackedVector2Array(0, 40, 0, 70, 20, 70)
width = 40.0
width_curve = ExtResource("12_efx61")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12
antialiased = true
script = ExtResource("8_gg7ch")
nodes = [NodePath("../../../Points/RemoteFeet/Foot1Upper/Foot11"), NodePath("../../../Points/RemoteFeet/Foot1Upper/Foot11/Foot12/Foot13"), NodePath("../../../Points/RemoteFeet/Foot1Upper/Foot11/Foot12/Foot13/Foot14")]

[node name="Foot2" type="Line2D" parent="Visuals/Z" node_paths=PackedStringArray("nodes")]
self_modulate = Color(0.14902, 0.360784, 0.258824, 1)
z_index = -1
points = PackedVector2Array(0, 0, 0, 30, 20, 30)
width = 40.0
width_curve = ExtResource("12_efx61")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 12
antialiased = true
script = ExtResource("8_gg7ch")
nodes = [NodePath("../../../Points/RemoteFeet/Foot2Upper/Foot21"), NodePath("../../../Points/RemoteFeet/Foot2Upper/Foot21/Foot22/Foot23"), NodePath("../../../Points/RemoteFeet/Foot2Upper/Foot21/Foot22/Foot23/Foot24")]

[node name="Root" type="Node2D" parent="Visuals/Z"]

[node name="Pants" type="Sprite2D" parent="Visuals/Z/Root"]
self_modulate = Color(0.0705882, 0.305882, 0.537255, 1)
position = Vector2(0, 31.5)
texture = ExtResource("13_1dd68")

[node name="Shirt" type="Sprite2D" parent="Visuals/Z/Root"]
self_modulate = Color(0.996078, 0.905882, 0.380392, 1)
texture = ExtResource("15_wl6sl")

[node name="Belt" type="Sprite2D" parent="Visuals/Z/Root"]
self_modulate = Color(0.996078, 0.682353, 0.203922, 1)
position = Vector2(0, 6)
texture = ExtResource("16_1ax2r")

[node name="AudioSteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_2wyhh")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SwitchDirection" type="Timer" parent="."]
one_shot = true

[node name="Attack" type="Node2D" parent="."]

[node name="AttackPivotTarget" type="Node2D" parent="Attack"]

[node name="AttackPivot" type="Node2D" parent="Attack" node_paths=PackedStringArray("target")]
script = ExtResource("6_kns8i")
speed_degrees = 720.0
target = NodePath("../AttackPivotTarget")

[node name="Gun" type="Node2D" parent="Attack/AttackPivot"]
position = Vector2(30, 0)
script = ExtResource("21_uasd7")

[node name="WeaponZ" type="Node2D" parent="Attack/AttackPivot/Gun"]
z_index = 155

[node name="Shotgun" type="Node2D" parent="Attack/AttackPivot/Gun/WeaponZ"]
position = Vector2(25, 10)

[node name="ShotgunButt" type="Sprite2D" parent="Attack/AttackPivot/Gun/WeaponZ/Shotgun"]
self_modulate = Color(0.745098, 0.290196, 0.184314, 1)
texture = ExtResource("22_liket")

[node name="ShotgunGun" type="Sprite2D" parent="Attack/AttackPivot/Gun/WeaponZ/Shotgun"]
self_modulate = Color(0.752941, 0.796078, 0.862745, 1)
texture = ExtResource("23_4up4j")

[node name="BulletSpawn" type="Node2D" parent="Attack/AttackPivot"]
position = Vector2(135, -7.5)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioGun" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_vipuo")
volume_db = 10.0

[connection signal="start_move" from="Move" to="Feet" method="_on_start_move"]
[connection signal="timeout" from="SwitchDirection" to="Move" method="_on_switch_direction_timeout"]
[connection signal="timeout" from="ShootTimer" to="Move" method="_on_shoot_timer_timeout"]
